implement main iteration

--- a/cryptographer GOST 28147-89.vcxproj.filters
+++ b/cryptographer GOST 28147-89.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClInclude Include="file_services.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="algorithm.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="debugging.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
