--- a/cryptographer GOST 28147-89.vcxproj
+++ b/cryptographer GOST 28147-89.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="cryptographer GOST 28147-89.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="algorithm.h" />
+    <ClInclude Include="debugging.h" />
     <ClInclude Include="file_services.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
